--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -157,7 +157,7 @@
     font-size: 2.25rem;
     font-weight: 700;
     margin-bottom: 0.25rem;
-    color: #004D2C;
+    color: #4ade80;
 }
 
 .mandiri-home__stat-label {
